--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <h5>Links</h5>
                     <ul class="nav-list">
                         <li class="nav-home"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                        <li class="nav-about"><a href="about.html"><i class="fas fa-user-friends"></i> About Turquoise</a></li>
+                        <li class="nav-about"><a href="about.html"><i class="fas fa-user-friends"></i> About Smartlink</a></li>
                         <li class="nav-contact"><a href="contact.html"><i class="far fa-comment-dots"></i> Contact Us</a></li>
                     </ul>
                 </div>
